terminando a primeira versão da apresentação

--- a/presentations/visitToHPE/hpePresentation.org
+++ b/presentations/visitToHPE/hpePresentation.org
@@ -146,24 +146,128 @@ Paralelo e Distribuído. Porto Alegre, 2016.
 ** 
 *** Trace's Format
 
-|---------------------+-------+-----------+--------------+-------|
-| =Region=              | =File=  | =Code Line= | =Metric=       | =Value= |
-|---------------------|-------|-----------|--------------|-------|
-| omp-parallel        | cg.f  |       736 | PAPIL2TCA    | 48282 |
-| omp-parallel        | ,cg.f |       736 | PAPIL2DCM    |  5288 |
-| omp-parallel        | cg.f  |       736 | PAPIL2ICM    |  8933 |
-| omp-do              | cg.f  |       736 | PAPIL2TCA    | 48841 |
-| omp-do              | cg.f  |       736 | PAPIL2DCM    |  5393 |
-| omp-do              | cg.f  |       736 | PAPIL2ICM    |  9092 |
-| omp-implicitbarrier | cg.f  |       739 | PAPIL2TCA    |  1321 |
-| omp-implicitbarrier | cg.f  |       739 | PAPIL2DCM156 |       |
-| omp-implicitbarrier | cg.f  |       739 | PAPIL2ICM    |   523 |
-| omp-parallel        | cg.f  |       736 | PAPIL2TCA    |  2048 |
-| omp-parallel        | cg.f  |       736 | PAPIL2DCM    |   196 |
-| omp-do              | cg.f  |       736 | PAPIL2TCA    |  2280 |
-| ...                 |       |           |              |       |
+|---------------------+-------+-----------+-----------+-------|
+| =Region=              | =File=  | =Code Line= | =Metric=    | =Value= |
+|---------------------+-------+-----------+-----------+-------|
+| omp-parallel        | cg.f  |       736 | PAPIL2TCA | 48282 |
+| omp-parallel        | ,cg.f |       736 | PAPIL2DCM |  5288 |
+| omp-parallel        | cg.f  |       736 | PAPIL2ICM |  8933 |
+| omp-do              | cg.f  |       736 | PAPIL2TCA | 48841 |
+| omp-do              | cg.f  |       736 | PAPIL2DCM |  5393 |
+| omp-do              | cg.f  |       736 | PAPIL2ICM |  9092 |
+| omp-implicitbarrier | cg.f  |       739 | PAPIL2TCA |  1321 |
+| omp-implicitbarrier | cg.f  |       739 | PAPIL2DCM |   156 |
+| omp-implicitbarrier | cg.f  |       739 | PAPIL2ICM |   523 |
+| omp-parallel        | cg.f  |       736 | PAPIL2TCA |  2048 |
+| omp-parallel        | cg.f  |       736 | PAPIL2DCM |   196 |
+| omp-do              | cg.f  |       736 | PAPIL2TCA |  2280 |
+| ...                 |       |           |           |       |
 
 ** 
 *** Preliminary Results
 
 
+#+LaTeX: \begin{columns}\begin{column}{.50\linewidth}
+#+LaTeX: {\centering\includegraphics[scale=.25]{img/ftGraph.png}}
+#+LaTeX: \end{column}
+#+LaTeX: \begin{column}{.45\linewidth}
+#+LaTeX: {\centering\includegraphics[scale=.25]{img/cgGraph.png}}
+#+LaTeX: \end{column}
+#+LaTeX: \end{columns}
+
+
+* Graphs                                                           :noexport:
+
+#+begin_src R :results output :session *ft* :exports both
+library(dplyr);
+
+df <- read.csv("traceF.csv");
+k <- df %>% select(region, file,codeline,metric,value) %>% group_by(file,region,codeline) %>% as.data.frame();
+
+k_l2dcm <- k[k$metric %in% "PAPI_L2_DCM",] 
+k_l2icm <- k[k$metric %in% "PAPI_L2_ICM",] 
+k_l2tca <- k[k$metric %in% "PAPI_L2_TCA",] 
+
+k2 <- data.frame(k_l2dcm$file,k_l2dcm$region,k_l2dcm$codeline,k_l2dcm$value,k_l2icm$value,k_l2tca$value);
+k2$missesrate = k2$k_l2dcm.value / k2$k_l2tca.value
+
+k2 <- k2[k2$missesrate > 0.40,]
+#+end_src
+
+#+RESULTS:
+
+
+#+begin_src R :results output graphics :file /home/gabrielbmoro/Dropbox/MasterStudy/works/dissertacao_gbmoro/presentations/visitToHPE/img/ftGraph.png :exports both :width 600 :height 400 :session *ft* 
+library(ggplot2);
+
+ggplot(k2, aes(x=as.factor(k_l2dcm.region), y=missesrate, fill=as.factor(k_l2dcm.codeline))) +
+  geom_bar(stat="identity", position=position_dodge(), width=0.5) + labs(y = "Average Cache Misses - Cache L2" , x = "Regions") + 
+  theme_bw() + 
+theme(
+    strip.text.x=element_text(size = 20),
+    axis.title=element_text(size=18),
+    axis.text = element_text(size = 10),
+    legend.key = element_rect(),
+    legend.background = element_rect(fill = "white"),
+    legend.title = element_text(size=18),
+    legend.text = element_text(size=14),
+    panel.grid.major = element_line(colour = "grey"),
+    panel.grid.minor = element_blank()
+  );
+#+end_src
+
+#+RESULTS:
+[[file:/home/gabrielbmoro/Dropbox/MasterStudy/works/dissertacao_gbmoro/presentations/visitToHPE/img/ftGraph.png]]
+
+#+begin_src R :results output :session *cg* :exports both
+library(dplyr);
+
+df <- read.csv("traceF.csv");
+k <- df %>% select(region, file,codeline,metric,value) %>% group_by(file,region,codeline) %>% as.data.frame();
+
+k_l2dcm <- k[k$metric %in% "PAPI_L2_DCM",] 
+k_l2icm <- k[k$metric %in% "PAPI_L2_ICM",] 
+k_l2tca <- k[k$metric %in% "PAPI_L2_TCA",] 
+
+k2 <- data.frame(k_l2dcm$file,k_l2dcm$region,k_l2dcm$codeline,k_l2dcm$value,k_l2icm$value,k_l2tca$value);
+k2$missesrate = k2$k_l2dcm.value / k2$k_l2tca.value
+
+k2 <- k2[k2$missesrate > 0.40,]
+#+end_src
+
+#+RESULTS:
+#+begin_example
+
+Attaching package: ‘dplyr’
+
+The following objects are masked from ‘package:stats’:
+
+    filter, lag
+
+The following objects are masked from ‘package:base’:
+
+    intersect, setdiff, setequal, union
+#+end_example
+
+
+#+begin_src R :results output graphics :file /home/gabrielbmoro/Dropbox/MasterStudy/works/dissertacao_gbmoro/presentations/visitToHPE/img/cgGraph.png :exports both :width 600 :height 400 :session *cg* 
+library(ggplot2);
+
+ggplot(k2, aes(x=as.factor(k_l2dcm.region), y=missesrate, fill=as.factor(k_l2dcm.codeline))) +
+  geom_bar(stat="identity", position=position_dodge(), width=0.5) + labs(y = "Average Cache Misses - Cache L2" , x = "Regions") + 
+  theme_bw() + 
+theme(
+    strip.text.x=element_text(size = 20),
+    axis.title=element_text(size=18),
+    axis.text = element_text(size = 10),
+    legend.key = element_rect(),
+    legend.background = element_rect(fill = "white"),
+    legend.title = element_text(size=18),
+    legend.text = element_text(size=14),
+    panel.grid.major = element_line(colour = "grey"),
+    panel.grid.minor = element_blank()
+  );
+#+end_src
+
+#+RESULTS:
+[[file:/home/gabrielbmoro/Dropbox/MasterStudy/works/dissertacao_gbmoro/presentations/visitToHPE/img/cgGraph.png]]
